--- a/app/app.css
+++ b/app/app.css
@@ -10,6 +10,8 @@
 	font-style: normal;
 }
 
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
 body {
      font-family: 'Roboto';
 }
@@ -71,10 +73,9 @@ body {
 }
 
 
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
 body
 {
-    font-family: 'Lato', 'sans-serif';
+    font-family: 'Lato', 'sans-serif' !important;
     }
 .profile 
 {
