--- a/app/app.css
+++ b/app/app.css
@@ -103,8 +103,11 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
-		height: 450px;
-		overflow: scroll;
+
+}
+#sidebar{
+	height: 450px;
+	overflow: scroll;
 }
 #page-content-wrapper {
     padding-left: 0;
