--- a/app/app.css
+++ b/app/app.css
@@ -108,6 +108,7 @@ body {
 #sidebar{
 	height: 450px;
 	overflow: scroll;
+	overflow-x: hidden; 
 }
 #page-content-wrapper {
     padding-left: 0;
@@ -225,4 +226,34 @@ body {
     width: 155px;
     transition: all .4s ease 0s;
 }
+}
+/* Tamaño del scroll */
+#sidebar::-webkit-scrollbar {
+  width: 5px;
+}
+
+ /* Estilos barra (thumb) de scroll */
+#sidebar::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 4px;
+}
+
+#sidebar::-webkit-scrollbar-thumb:active {
+  background-color: #999999;
+}
+
+#sidebar::-webkit-scrollbar-thumb:hover {
+  background: #b3b3b3;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+ /* Estilos track de scroll */
+#sidebar::-webkit-scrollbar-track {
+  background: #e1e1e1;
+  border-radius: 4px;
+}
+
+#sidebar::-webkit-scrollbar-track:hover,
+#sidebar::-webkit-scrollbar-track:active {
+  background: #d4d4d4;
 }
