--- a/app/app.css
+++ b/app/app.css
@@ -262,7 +262,7 @@ body {
 	background: aqua !important;
 }
 
-.modal-body{
+.modal-body-he{
 	height: 450px !important;
 	overflow: scroll !important;
 }
