--- a/app/app.css
+++ b/app/app.css
@@ -272,3 +272,10 @@ body {
 .incideRow{
     background: darkseagreen;
 }
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+
+}
