--- a/app/app.css
+++ b/app/app.css
@@ -273,13 +273,13 @@ body {
     background: darkseagreen;
 }
 .footer {
-  position: fixed;
+  /* position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
+  width: 100%; */
 
 }
 .wrapper{
-	overflow: scroll;
-	height: 600px;
+	/* overflow: scroll;
+	height: 600px; */
 }
