--- a/app/app.css
+++ b/app/app.css
@@ -327,12 +327,15 @@ body {
   border-bottom-color: #0099ff;
 }
 .card:hover, .card:focus {
-	height: 200px;
-  clip-path: circle(75%);
-  border-radius: 20px;
-  box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.12), 0px 3px 18px rgba(0, 0, 0, 0.08);
-  background: #ffffff;
-  outline: none;
+	height: 519px;
+	clip-path: circle(75%);
+	border-radius: 20px;
+	box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.12), 0px 3px 18px rgba(0, 0, 0, 0.08);
+	background: #ffffff;
+	outline: none;
+	position: absolute;
+	opacity: 1;
+	z-index: 10;
 }
 .card:hover .card__infoicon, .card:focus .card__infoicon {
   opacity: 0;
