--- a/app/app.css
+++ b/app/app.css
@@ -343,3 +343,4 @@ body {
 .card:focus {
   box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.12), 0px 3px 18px rgba(0, 0, 0, 0.08), 0px 0px 0px 4px rgba(0, 0, 0, 0.2);
 }
+.table td  {white-space: nowrap !important;}
