--- a/app/app.css
+++ b/app/app.css
@@ -352,3 +352,12 @@ body {
 #card__infoicon:hover > #infoPsico  {
 	display: block;
 }
+
+.modal-dialog {
+	-webkit-box-shadow: 0px 0px 102px 16px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 102px 16px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 102px 16px rgba(0,0,0,0.75);
+}
+.modal{
+	overflow: auto !important;
+}
