--- a/app/app.css
+++ b/app/app.css
@@ -90,8 +90,8 @@ body {
     left: 60px;
     width: 155px;
     background: #222;
-    position: fixed;
-    height: 100%;
+    position: absolute;
+    height: 98%;
     z-index: 1000;
     transition: all .4s ease 0s;
 }
@@ -360,4 +360,50 @@ body {
 }
 .modal{
 	overflow: auto !important;
+}
+
+#wrapper{
+	min-height: 100%;
+	min-height: 100vh;
+	padding-top: 15px;
+	position: relative;
+	z-index: 1;
+
+	-webkit-box-shadow: #000 0 7px 35px 0;
+	-moz-box-shadow: #000 0 7px 35px 0;
+	box-shadow: #000 0 7px 35px 0;
+
+}
+
+#site-footer {
+	padding: 25px 0;
+	font-size: 85%;
+	background-color: #2A2A2A;
+	position: fixed;
+	z-index: -1;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+
+
+html, body {
+	padding: 0;
+	margin: 0;
+	background-color: #ffffff;
+}
+#wrapper{
+	background-size: contain;
+	/* background-position: center;
+	background-repeat: no-repeat;
+	background-image: url('http://dummyimage.com/3000x3000/D1D1D1/2A2A2A.png?text=Scroll+Down'); */
+}
+
+#site-footer {
+	min-height: 8vw;
+	/* DID THIS SO YOU CAN SEE IT AUTOMATICALLY SCALE - SIMULATION RESPONSIVENESS */
+	/* RESIZE THE WINDOW AND THEN SCROLL VERITCALLY AGAIN */
+	/* background-size: cover; */
+	/* background-position: center; */
+	/* background-image: url('http://dummyimage.com/1500x1500/2A2A2A/FFF.png?text=Footer+Area+(Resize+Me)'); */
 }
