--- a/app/app.css
+++ b/app/app.css
@@ -91,7 +91,7 @@ body {
     width: 155px;
     background: #222;
     position: absolute;
-    height: 98%;
+    height: 100%;
     z-index: 1000;
     transition: all .4s ease 0s;
 }
@@ -365,7 +365,7 @@ body {
 #wrapper{
 	min-height: 100%;
 	min-height: 100vh;
-	padding-top: 15px;
+	/* padding-top: 15px; */
 	position: relative;
 	z-index: 1;
 
@@ -406,4 +406,12 @@ html, body {
 	/* background-size: cover; */
 	/* background-position: center; */
 	/* background-image: url('http://dummyimage.com/1500x1500/2A2A2A/FFF.png?text=Footer+Area+(Resize+Me)'); */
+}
+
+.navbar{
+	padding: 0 !important;
+}
+.navbar-brand{
+	padding-top: 0 !important;
+ padding-bottom: 0 !important;
 }
