--- a/app/app.css
+++ b/app/app.css
@@ -346,7 +346,11 @@ body {
 .card:focus {
   box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.12), 0px 3px 18px rgba(0, 0, 0, 0.08), 0px 0px 0px 4px rgba(0, 0, 0, 0.2);
 } */
-.table td  {white-space: nowrap !important;}
+.table td  {
+	padding-bottom: 5px !important;
+  padding-top: 5px !important;
+	white-space: nowrap !important;
+}
 #infoPsico {
 	display: none;
 	padding: 5px
@@ -772,6 +776,9 @@ box-shadow:  -2px 0px 5px 1px rgba(0,0,0,0.75);
 	border: 0;
   box-shadow: 0 1px 1px 0 rgba(60,75,100,.14), 0 2px 1px -1px rgba(60,75,100,.12), 0 1px 3px 0 rgba(60,75,100,.2);
 }
+.card-min{
+	min-height: 300px;
+}
  #wrapper{
 	 background-color: #dcdcdd;
  }
@@ -792,4 +799,7 @@ td p {
 
 .table {
 	font-size: 13px
+}
+.badge{
+	margin-left: 10px !important
 }
