--- a/app/app.css
+++ b/app/app.css
@@ -1,3 +1,10 @@
+
+/* AZUL: #019cde
+
+NARANJA: #BB451F
+
+GRIS: #CACFD2 */
+
 /* app css stylesheet */
 @import "https://daneden.github.io/animate.css/animate.min.css";
 @font-face {
