--- a/app/app.css
+++ b/app/app.css
@@ -299,8 +299,14 @@ body {
 	/* background-color: #dcdcdd; */
 	/* overflow-x: hidden !important; */
 }
+
+.modal{
+  padding-right: 0px !important;
+}
 .modal-90{
-	width: 95%;
+  width: 100%;
+  margin: 0px !important;
+  /* padding: 0px !important; */
 }
 
 .modal-100-ht{
